--- a/web/src/styles/_variables.scss
+++ b/web/src/styles/_variables.scss
@@ -10,6 +10,8 @@
     --color-base: #2E2E2E;
 
     --color-deco-M-1: #FFFFFF;
+    --color-deco-M-0: #9e9e9e;
+    --color-deco-M-0_rgb: 158, 158, 158;
     --color-deco-base: #565656;
     --color-deco-m-1: #212121;
 
