--- a/web/src/components/editor/item.scss
+++ b/web/src/components/editor/item.scss
@@ -2,7 +2,7 @@
 
 .item-header{
   display: flex;
-  border-bottom: 1px solid var(--color-deco-base);
+  border-bottom: 1px solid var(--color-deco-M-1);
   align-items: center;
   padding-bottom: 3px; 
 
@@ -27,6 +27,11 @@
 .item-content{
 
   font-size: 12px;
+
+  &.closed{
+    height:0;
+    overflow:hidden;
+  }
 }
 
 .item-toolbar{
@@ -61,13 +66,27 @@
   }
   
   .prop-col-controls{
-  
+    display:flex;
+    flex-direction:column;
+    justify-content: center;
   }
+}
+
+.prop-cell{
+  display: flex;
+  align-items: center;
+  height: 30px;
+
+  gap:7px;
 }
 
 
 .prop-xy{}
-.prop-time{}
+.prop-time{
+
+
+ 
+}
 .prop-styles{}
 .prop-nodes-animation{
   input[type=checkbox] {
@@ -80,6 +99,8 @@
 .item-node-section-title{
   font-size: 14px;
   color: var(--color-deco-M-0);
+  border-bottom: 1px solid var(--color-deco-M-0);
+  padding-bottom:7px;
   margin: 7px 0;
 }
 
@@ -94,6 +115,16 @@
   
 }
 
+
+.item-node-blocks-container{
+
+
+    &.closed{
+      height:0;
+      overflow:hidden;
+    }
+
+}
 
 .item-node_block{
 
